back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-tarjetas
  labels:
    app: api-tarjetas
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-tarjetas
      tier: backend
  template:
    metadata:
      labels:
        app: api-tarjetas
        tier: backend
    spec:
      containers:
        - name: api-tarjetas
          image: alejamarin/getting-started-back
          ports:
            - name: back-server
              containerPort: 8080
