front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarjetas
  labels:
    app: tarjetas
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tarjetas
      tier: frontend
  template:
    metadata:
      labels:
        app: tarjetas
        tier: frontend
    spec:
      containers:
        - name: tarjetas
          image: alejamarin/gs-front
          #image: adrabenchedh/dh-examen:front
          ports:
            - name: http-server
              containerPort: 80
