back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: api-tarjetas
    tier: backend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: back-server
  selector:
    app: api-tarjetas
    tier: backend
