front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: tarjetas
    tier: frontend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-server
  selector:
    app: tarjetas
    tier: frontend
